# pq-gake-fsxy

./: .gitignore  CMakeLists.txt  Makefile  README.md  liboqs.sh  package-lock.json
.github/: liboqs.sh
.github/workflows/: ci.yml
graphics/: KEM.conf  PARTIES.conf  build-fo-ake.sh  config.yaml  convert_tables.sh  cut-images.sh  generate_graphics.py  generate_graphics_foake_vs_fsxy.py  generate_graphics_time.py  json2csv-fo-ake.js  json2csv.js  requirements.txt  run_tests.sh
src/: CMakeLists.txt  commitment.c  commitment.h  fsxy-ake.c  fsxy-ake.h  gake.c  gake.h  gcwr-ake.c  gcwr-ake.h  utils.c  utils.h
test/: CMakeLists.txt  test-gcwr-ake.c  test_commitment.c  test_gake.c  test_speed_ake.c  test_speed_commitment.c  test_speed_gake.c  test_speed_kem.c
