add_compile_options(-Wall -Wextra -Wpedantic)
add_compile_options(-Werror)
add_compile_options(-Wmissing-prototypes -Wredundant-decls -Wshadow -Wpointer-arith)
add_compile_options(-O3 -fwrapv)

add_executable(test_aes256gcm ../src/utils.c test_aes256gcm.c)
target_link_libraries(test_aes256gcm PUBLIC aes256gcm)

set(TEST_GCWR_AKE_SRCS ../src/gcwr-ake.c test-gcwr-ake.c)
add_executable(test_gcwr_ake ${TEST_GCWR_AKE_SRCS})
target_link_libraries(test_gcwr_ake PUBLIC utils gcwr-ake)

set(TEST_INDCCA ../src/indcca.c test_indcca.c)
add_executable(test_indcca ${TEST_INDCCA})
target_link_libraries(test_indcca PUBLIC oqs utils indcca aes256gcm)

set(TEST_COMMITMENT ../src/commitment.c test_commitment.c)
add_executable(test_commitment ${TEST_COMMITMENT})
target_link_libraries(test_commitment PUBLIC oqs utils commitment)

set(TEST_GAKE ../src/gake.c ../src/commitment.c test_gake.c)
add_executable(test_gake ${TEST_GAKE})
target_link_libraries(test_gake PUBLIC gake commitment)

add_test(NAME aes256gcm COMMAND test_aes256gcm)
add_test(NAME test_gcwr_ake COMMAND test_gcwr_ake)
add_test(NAME test_indcca COMMAND test_indcca)
add_test(NAME test_commitment COMMAND test_commitment)
add_test(NAME test_gake_Kyber512 COMMAND test_gake 100 Kyber512)
add_test(NAME test_gake_Kyber768 COMMAND test_gake 100 Kyber768)
add_test(NAME test_gake_Kyber1024 COMMAND test_gake 100 Kyber1024)
add_test(NAME test_gake_LightSaber-KEM COMMAND test_gake 100 LightSaber-KEM)
add_test(NAME test_gake_Saber-KEM COMMAND test_gake 100 Saber-KEM)
add_test(NAME test_gake_FireSaber-KEM COMMAND test_gake 100 FireSaber-KEM)
add_test(NAME test_gake_NTRU-HPS-2048-509 COMMAND test_gake 100 NTRU-HPS-2048-509)
